@@ -1,5 +1,10 @@
 2008-09-31  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/examples/list_contacts/main.c: Trying to read the subscribed 
+	contacts details.
+
+2008-09-31  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/examples/list_contacts/main.c: Get the ContactsList interface, 
 	though I do not yet know how to get details for each contact via 
 	the handle.
